--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        os: [ubuntu-latest]
 
     steps:
       - name: Context
@@ -21,12 +21,12 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Prepare NSIS
-        if: matrix.os == 'windows-latest'
-        id: prep_nsis
-        uses: joncloud/makensis-action@v1
-        with:
-          just-include: true
+      # - name: Prepare NSIS
+      #   if: matrix.os == 'windows-latest'
+      #   id: prep_nsis
+      #   uses: joncloud/makensis-action@v1
+      #   with:
+      #     just-include: true
 
       - name: Use Node.js 14.x
         uses: actions/setup-node@v1
