--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,10 +28,10 @@ jobs:
       #   with:
       #     just-include: true
 
-      - name: Use Node.js 14.x
+      - name: Use Node.js 16.x
         uses: actions/setup-node@v1
         with:
-          node-version: 14.x
+          node-version: 16.x
 
       - name: yarn version
         run: |
@@ -48,6 +48,7 @@ jobs:
       - name: Build App [ubuntu]
         if: matrix.os == 'ubuntu-latest'
         run: |
+          npm install
           npm run dist
       # - name: Build App [windows]
       #   if: matrix.os == 'windows-latest'
