--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           npm install
-          npm run build
+          npm run dist:zip
       # - name: Build App [windows]
       #   if: matrix.os == 'windows-latest'
       #   run: |
