--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
       - name: set version
         run: |
           echo "VERSION=$(npm pkg get version | tr -d '\"')" >> $GITHUB_ENV
-          echo ${{env.VERSION}}
+          echo $VERSION
 
 
       - name: yarn version
@@ -72,3 +72,47 @@ jobs:
           name: ${{ matrix.os }}
           path: dist/upscayl-${{env.VERSION}}.zip
 
+  release:
+    needs: build
+    name: Release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Context
+        if: startsWith(github.ref, 'refs/tags/v')
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
+    
+      - name: Get the version
+        id: get_version
+        if: startsWith(github.ref, 'refs/tags/v')
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\/v/}
+      
+      - uses: actions/download-artifact@v1
+        if: startsWith(github.ref, 'refs/tags/v')
+        with:
+          name: ubuntu-latest
+      
+      - name: Create Release
+        if: startsWith(github.ref, 'refs/tags/v')
+        id: create_release
+        uses: actions/create-release@v1.0.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}
+          draft: false
+          prerelease: false
+      
+      - name: Upload Release Asset [ubuntu-zip-x64]
+        if: startsWith(github.ref, 'refs/tags/v')
+        continue-on-error: true
+        uses: actions/upload-release-asset@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./ubuntu-latest/upscayl-${{ steps.get_version.outputs.VERSION }}.zip
+          asset_name: Upscayl-${{ steps.get_version.outputs.VERSION }}-linux64.zip
+          asset_content_type: application/octet-stream
