--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,16 +24,15 @@ jobs:
       - uses: actions/cache@v2
         with:
           # See here for caching with `yarn` https://github.com/actions/cache/blob/main/examples.md#node---yarn or you can leverage caching with actions/setup-node https://github.com/actions/setup-node
-           path: |
+          path: |
             ~/.npm
             ${{ github.workspace }}/node_modules
             ${{ github.workspace }}/.next/cache
           # Generate a new cache whenever packages or source files change.
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.js') }}
-            # If source files changed but packages didn't, rebuild from a prior cache. 
-           restore-keys: |
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          # If source files changed but packages didn't, rebuild from a prior cache.
+          restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
-
 
       # - name: Prepare NSIS
       #   if: matrix.os == 'windows-latest'
@@ -50,7 +49,6 @@ jobs:
       - name: set version
         run: |
           echo "VERSION=$(npm pkg get version | tr -d '\"')" >> $GITHUB_ENV
-
       - name: yarn version
         run: |
           yarn version
